<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.14">
  <GVL Name="Seguridad" Id="{426fc3e0-a370-431f-82af-bf87c9c01019}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	Run				AT%Q* :BOOL;
	ErrorAck		AT%Q* :BOOL;
	Restart			AT%Q* :BOOL;
	ResetPorta		AT%Q* :BOOL;
	PB_Emergencia	AT%I* :BOOL;	//Fica em TRUE quando a emergência está ok
	ParadaDePorta	AT%I* :BOOL;	//Fica em TRUE quando as portas estão fechadas e foi feito o reset
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>